Travis CI: Fix '-std=c11 is valid for C/ObjC but not for C++' warning (a cherry-pick of commit 1fbcfe297 from 'release-7_6')

--- a/.travis.yml
+++ b/.travis.yml
@@ -126,7 +126,7 @@ jobs:
     compiler: gcc
     env:
     - CFLAGS_EXTRA="-std=c11 -D GC_NO_SIGSETJMP"
-    - CONF_OPTIONS="--disable-threads --enable-gc-assertions --enable-cplusplus"
+    - CONF_OPTIONS="--disable-threads --enable-gc-assertions"
   - os: linux
     compiler: gcc
     env:
