Fix missing specific.c in CMake script
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && enable_thread_local_alloc]
(SRC): Add specific.c file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,7 @@ if (CMAKE_USE_PTHREADS_INIT)
   endif()
   if (enable_thread_local_alloc)
     add_definitions("-DTHREAD_LOCAL_ALLOC")
-    set(SRC ${SRC} thread_local_alloc.c)
+    set(SRC ${SRC} specific.c thread_local_alloc.c)
   endif()
   message("Explicit GC_INIT() calls may be required.")
   if (HOST MATCHES .*-.*-hpux11.*)
