Fix missing specific.c in CMake script (a cherry-pick of commit 6668de8af from 'master')
* CMakeLists.txt [CMAKE_USE_PTHREADS_INIT && enable_thread_local_alloc]
(SRC): Add specific.c file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ IF(CMAKE_USE_PTHREADS_INIT)
                 ENDIF(enable_parallel_mark)
                 IF(enable_thread_local_alloc)
                     ADD_DEFINITIONS("-DTHREAD_LOCAL_ALLOC")
-                    SET(SRC ${SRC} thread_local_alloc.c)
+                    SET(SRC ${SRC} specific.c thread_local_alloc.c)
                 ENDIF(enable_thread_local_alloc)
                 MESSAGE("Explicit GC_INIT() calls may be required.")
         ENDIF()
