Create and install CMake support files.
       Issue #327 (bdwgc).

	* CMakeLists.txt: include CMakePackageConfigHelpers macros.
	Set target_include_directories for each target.
	Export all targets to 'BDWgcTargets' instead of separate exports
	Install the BDWgcTargets.cmake file with namespace 'BDWgc::'.
	Also export BDWgcTargets so it can be used from the build dir as
	well as the install dir.
	Create and install BDWgcConfig.cmake BDWgcConfigVersion.cmake.

	* Config.cmake.in: New. Used to create BDWgcConfig.cmake.

Signed-off-by: Steve Youngs <steve@sxemacs.org>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ include(CheckIncludeFile)
 include(CheckSymbolExists)
 include(CTest)
 include(GNUInstallDirs)
+include(CMakePackageConfigHelpers)
 
 # Customize the build by passing "-D<option_name>=ON|OFF" in the command line.
 option(BUILD_SHARED_LIBS "Build shared libraries" ON)
@@ -451,14 +452,26 @@ add_library(gc ${SRC})
 if (enable_threads)
   target_link_libraries(gc PRIVATE ${THREADDLLIBS})
 endif()
+target_include_directories(gc
+	INTERFACE
+	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+	"$<INSTALL_INTERFACE:include>")
 
 if (enable_cplusplus)
   add_library(gccpp gc_badalc.cc gc_cpp.cc)
   target_link_libraries(gccpp PRIVATE gc)
+  target_include_directories(gccpp
+	INTERFACE
+	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+	"$<INSTALL_INTERFACE:include>")
   if (enable_throw_bad_alloc_library)
     # The same as gccpp but contains only gc_badalc.
     add_library(gctba gc_badalc.cc)
     target_link_libraries(gctba PRIVATE gc)
+    target_include_directories(gctba
+	INTERFACE
+	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+	"$<INSTALL_INTERFACE:include>")
   endif(enable_throw_bad_alloc_library)
 endif()
 
@@ -466,11 +479,15 @@ if (build_cord)
   set(CORD_SRC cord/cordbscs.c cord/cordprnt.c cord/cordxtra.c)
   add_library(cord ${CORD_SRC})
   target_link_libraries(cord PRIVATE gc)
+  target_include_directories(cord
+	INTERFACE
+	"$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+	"$<INSTALL_INTERFACE:include>")
   if (BUILD_SHARED_LIBS)
     set_property(TARGET cord PROPERTY VERSION ${GCCPP_VERSION})
     set_property(TARGET cord PROPERTY SOVERSION ${GCCPP_SOVERSION})
   endif()
-  install(TARGETS cord EXPORT cordExports
+  install(TARGETS cord EXPORT BDWgcTargets
           LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
           ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
           RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
@@ -496,7 +513,7 @@ if (BUILD_SHARED_LIBS)
   set_property(TARGET gc PROPERTY VERSION ${GC_VERSION})
   set_property(TARGET gc PROPERTY SOVERSION ${GC_SOVERSION})
 endif()
-install(TARGETS gc EXPORT gcExports
+install(TARGETS gc EXPORT BDWgcTargets
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
         ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
@@ -507,7 +524,7 @@ if (enable_cplusplus)
     set_property(TARGET gccpp PROPERTY VERSION ${GCCPP_VERSION})
     set_property(TARGET gccpp PROPERTY SOVERSION ${GCCPP_SOVERSION})
   endif()
-  install(TARGETS gccpp EXPORT gccppExports
+  install(TARGETS gccpp EXPORT BDWgcTargets
           LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
           ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
           RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
@@ -517,7 +534,7 @@ if (enable_cplusplus)
       set_property(TARGET gctba PROPERTY VERSION ${GCCPP_VERSION})
       set_property(TARGET gctba PROPERTY SOVERSION ${GCCPP_SOVERSION})
     endif()
-    install(TARGETS gctba EXPORT gctbaExports
+    install(TARGETS gctba EXPORT BDWgcTargets
             LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
             ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
             RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
@@ -700,3 +717,24 @@ install(FILES doc/gc.man
         DESTINATION ${CMAKE_INSTALL_MANDIR}/man3
 	RENAME gc.3)
 
+## CMake config/targets files
+install(EXPORT BDWgcTargets
+	       FILE BDWgcTargets.cmake
+	       NAMESPACE BDWgc::
+	       DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/bdwgc)
+
+configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
+	"${CMAKE_CURRENT_BINARY_DIR}/BDWgcConfig.cmake"
+	INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/bdwgc
+	NO_SET_AND_CHECK_MACRO)
+
+write_basic_package_version_file("${CMAKE_CURRENT_BINARY_DIR}/BDWgcConfigVersion.cmake"
+	VERSION "${PACKAGE_VERSION}"
+	COMPATIBILITY AnyNewerVersion)
+
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/BDWgcConfig.cmake"
+	      "${CMAKE_CURRENT_BINARY_DIR}/BDWgcConfigVersion.cmake"
+	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/bdwgc)
+
+export(EXPORT BDWgcTargets
+       FILE "${CMAKE_CURRENT_BINARY_DIR}/BDWgcTargets.cmake")
