--- a/Makefile.am
+++ b/Makefile.am
@@ -206,7 +206,7 @@ EXTRA_DIST += README.QUICK
 # :GOTCHA: deliberately we do not include 'Makefile'
 EXTRA_DIST += NT_MAKEFILE OS2_MAKEFILE PCR-Makefile digimars.mak \
     Makefile.direct SMakefile.amiga WCC_MAKEFILE autogen.sh CMakeLists.txt \
-    build/s60v3/bld.inf build/s60v3/libgc.mmp
+    Config.cmake.in build/s60v3/bld.inf build/s60v3/libgc.mmp
 
 # files used by makefiles other than Makefile.am
 #
