--- a/.travis.yml
+++ b/.travis.yml
@@ -623,7 +623,7 @@ jobs:
 
 before_install:
 - if [[ "$CPPCHECK_ENABLE" != "" ]]; then
-    CPPCHECK_VER=main;
+    CPPCHECK_VER=2.4.1;
     git clone --depth=3 https://github.com/danmar/cppcheck.git
             ~/cppcheck -b $CPPCHECK_VER;
     make --directory ~/cppcheck -j8 CXXFLAGS="-O3 -march=native -D NDEBUG";
