Travis CI: Pass nproc to make -j option
This should fix "make: illegal argument to -j" error on FreeBSD.

--- a/.travis.yml
+++ b/.travis.yml
@@ -681,8 +681,8 @@ script:
   fi
 - if [[ "$CSA_CHECK" != true && "$CMAKE_CONFIG" == ""
         && "$CPPCHECK_ENABLE" == "" && "$COVERITY_SCAN_BRANCH" != 1 ]]; then
-    make -j -f $MAKEFILE_NAME $MAKEFILE_TARGETS CFLAGS_EXTRA="$CFLAGS_EXTRA"
-            LDFLAGS="$LDFLAGS";
+    make -j`nproc` -f $MAKEFILE_NAME $MAKEFILE_TARGETS
+         CFLAGS_EXTRA="$CFLAGS_EXTRA" LDFLAGS="$LDFLAGS";
   fi
 - if [[ "$CMAKE_CONFIG" != "" ]]; then
     cmake $CMAKE_OPTIONS -Dbuild_tests=ON -Denable_werror=ON
