Travis CI: Pass fixed number (32) to make -j option
This should be more portable (than `nproc`) and should work on FreeBSD.

--- a/.travis.yml
+++ b/.travis.yml
@@ -681,7 +681,7 @@ script:
   fi
 - if [[ "$CSA_CHECK" != true && "$CMAKE_CONFIG" == ""
         && "$CPPCHECK_ENABLE" == "" && "$COVERITY_SCAN_BRANCH" != 1 ]]; then
-    make -j`nproc` -f $MAKEFILE_NAME $MAKEFILE_TARGETS
+    make -j32 -f $MAKEFILE_NAME $MAKEFILE_TARGETS
          CFLAGS_EXTRA="$CFLAGS_EXTRA" LDFLAGS="$LDFLAGS";
   fi
 - if [[ "$CMAKE_CONFIG" != "" ]]; then
