Increase NTHREADS value in tests if code coverage analysis
Issue #357 (bdwgc).

* configure.ac [enable_gcov] (CFLAGS): Prepend -D NTHREADS=20.
* tests/subthread_create.c [!NTHREADS] (NTHREADS): Change default value
to 5 (from 31).
* tests/threadkey_test.c [!NTHREADS] (NTHREADS): Likewise.
* tests/subthread_create.c (NTHREADS_INNER): New macro (has roughly
same value by default as old definition of NTHREADS).
* tests/threadkey_test.c (NTHREADS_INNER): Likewise.
* tests/subthread_create.c (main): Use NTHREADS_INNER instead of
NTHREADS.
* tests/subthread_create.c (main): Likewise.

--- a/configure.ac
+++ b/configure.ac
@@ -1000,7 +1000,7 @@ AM_CONDITIONAL([SINGLE_GC_OBJ],
 AC_ARG_ENABLE(gcov,
     [AS_HELP_STRING([--enable-gcov], [turn on code coverage analysis])])
 if test "$enable_gcov" = "yes"; then
-  CFLAGS="$CFLAGS --coverage"
+  CFLAGS="-D NTHREADS=20 $CFLAGS --coverage"
   if test "${enable_shared}" = no; then
     # FIXME: As of g++-4.8.4/x86_64, in case of shared library build, test_cpp
     # linkage fails with "hidden symbol atexit is referenced by DSO" message.
