Travis CI: run all tests twice for code coverage
Issue #357 (bdwgc).

--- a/.travis.yml
+++ b/.travis.yml
@@ -358,10 +358,12 @@ jobs:
     env:
     - CONF_OPTIONS="--enable-gcov --enable-single-obj-compilation --enable-cplusplus --disable-shared --enable-gc-assertions"
     - CFLAGS_EXTRA="-D USE_CUSTOM_SPECIFIC"
-    - REPORT_COVERAGE=true
     - CC_FOR_CHECK=g++
     - MAKEFILE_TARGETS="all"
     - MAKEFILE_TARGETS_CHECK="check"
+    - NO_CLONE_LIBATOMIC_OPS=true
+    - REPORT_COVERAGE=true
+    - TESTS_CUSTOM_RUN=true
   - compiler: gcc
     env:
     - CONF_OPTIONS="--enable-gc-debug --enable-cplusplus"
