Make Libs elements space-separated in bdw-gc.pc when generated by CMake (fix of commit fe4ed5af3)
Issue #356 (bdwgc).

* CMakeLists.txt [enable_threads] (THREADDLLIBS): Put the value in
quotes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,9 +153,9 @@ if (enable_threads)
   if (${CMAKE_DL_LIBS} MATCHES ^[^-].*)
     # Some cmake versions have a broken non-empty CMAKE_DL_LIBS omitting "-l".
     # Assume CMAKE_DL_LIBS contains just one library.
-    set(THREADDLLIBS ${THREADDLLIBS} -l${CMAKE_DL_LIBS})
+    set(THREADDLLIBS "${THREADDLLIBS} -l${CMAKE_DL_LIBS}")
   else()
-    set(THREADDLLIBS ${THREADDLLIBS} ${CMAKE_DL_LIBS})
+    set(THREADDLLIBS "${THREADDLLIBS} ${CMAKE_DL_LIBS}")
   endif()
 endif(enable_threads)
 
